// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Installer matches snapshot 1`] = `
<div class="ipl-space color-dark layout vertical" data-v-11cc5f1c="">
  <div>Installation folder: /install/path</div>
  <status-row-stub color="gray" class="m-t-8"></status-row-stub>
  <div class="layout horizontal m-t-8">
    <ipl-button-stub label="Select folder" color="blue" disabled="false" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" href="" data-test="install-directory-select-button"></ipl-button-stub>
    <ipl-button-stub label="Install" color="green" disabled="true" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" href="" data-test="install-button" class="m-l-8"></ipl-button-stub>
    <ipl-button-stub label="Open dashboard" color="green" disabled="true" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" href="" data-test="open-dashboard-button" class="m-l-8"></ipl-button-stub>
  </div>
</div>
<div class="ipl-expansion-panel__content m-t-8" data-test="nodecg-log-space" data-v-67856a23="" style="display: none;">
  <div class="ipl-expansion-panel__header" data-v-67856a23="">
    <div class="ipl-expansion-panel__header-background" data-v-67856a23=""></div>
    <div class="ipl-expansion-panel__title" data-v-67856a23=""> NodeCG log <span class="badge badge-red">Stopped</span></div>
    <font-awesome-icon-stub icon="chevron-left" border="false" fixedwidth="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" class="icon content-expanded" data-v-67856a23=""></font-awesome-icon-stub>
    <div class="header-extra" data-v-67856a23=""></div>
  </div>
  <div class="content" data-v-67856a23="">
    <div class="layout vertical center-horizontal">
      <log-display-stub logkey="run-nodecg" class="m-t-4"></log-display-stub>
    </div>
  </div>
</div>
<log-overlay-stub title="Installing..." logkey="install-nodecg" visible="false" nobackgroundclose="true" withprogress="true"></log-overlay-stub>
`;

exports[`Installer matches snapshot when nodecg status is NOT_STARTED 1`] = `
<div class="ipl-space color-dark layout vertical" data-v-11cc5f1c="">
  <div>Installation folder: </div>
  <status-row-stub color="gray" class="m-t-8"></status-row-stub>
  <div class="layout horizontal m-t-8">
    <ipl-button-stub label="Select folder" color="blue" disabled="false" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" href="" data-test="install-directory-select-button"></ipl-button-stub>
    <ipl-button-stub label="Install" color="green" disabled="true" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" href="" data-test="install-button" class="m-l-8"></ipl-button-stub>
    <ipl-button-stub label="Open dashboard" color="green" disabled="true" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" href="" data-test="open-dashboard-button" class="m-l-8"></ipl-button-stub>
  </div>
</div>
<div class="ipl-expansion-panel__content m-t-8" data-test="nodecg-log-space" data-v-67856a23="" style="display: none;">
  <div class="ipl-expansion-panel__header" data-v-67856a23="">
    <div class="ipl-expansion-panel__header-background" data-v-67856a23=""></div>
    <div class="ipl-expansion-panel__title" data-v-67856a23=""> NodeCG log <span class="badge badge-red">Stopped</span></div>
    <font-awesome-icon-stub icon="chevron-left" border="false" fixedwidth="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" class="icon content-expanded" data-v-67856a23=""></font-awesome-icon-stub>
    <div class="header-extra" data-v-67856a23=""></div>
  </div>
  <div class="content" data-v-67856a23="">
    <div class="layout vertical center-horizontal">
      <log-display-stub logkey="run-nodecg" class="m-t-4"></log-display-stub>
    </div>
  </div>
</div>
<log-overlay-stub title="Installing..." logkey="install-nodecg" visible="false" nobackgroundclose="true" withprogress="true"></log-overlay-stub>
`;

exports[`Installer matches snapshot when nodecg status is RUNNING 1`] = `
<div class="ipl-space color-dark layout vertical" data-v-11cc5f1c="">
  <div>Installation folder: </div>
  <status-row-stub color="gray" class="m-t-8"></status-row-stub>
  <div class="layout horizontal m-t-8">
    <ipl-button-stub label="Select folder" color="blue" disabled="false" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" href="" data-test="install-directory-select-button"></ipl-button-stub>
    <ipl-button-stub label="Install" color="green" disabled="true" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" href="" data-test="install-button" class="m-l-8"></ipl-button-stub>
    <ipl-button-stub label="Open dashboard" color="green" disabled="false" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" href="" data-test="open-dashboard-button" class="m-l-8"></ipl-button-stub>
  </div>
</div>
<div class="ipl-expansion-panel__content m-t-8" data-test="nodecg-log-space" data-v-67856a23="">
  <div class="ipl-expansion-panel__header" data-v-67856a23="">
    <div class="ipl-expansion-panel__header-background" data-v-67856a23=""></div>
    <div class="ipl-expansion-panel__title" data-v-67856a23=""> NodeCG log <span class="badge badge-green">Running</span></div>
    <font-awesome-icon-stub icon="chevron-left" border="false" fixedwidth="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" class="icon content-expanded" data-v-67856a23=""></font-awesome-icon-stub>
    <div class="header-extra" data-v-67856a23=""></div>
  </div>
  <div class="content" data-v-67856a23="">
    <div class="layout vertical center-horizontal">
      <log-display-stub logkey="run-nodecg" class="m-t-4"></log-display-stub>
    </div>
  </div>
</div>
<log-overlay-stub title="Installing..." logkey="install-nodecg" visible="false" nobackgroundclose="true" withprogress="true"></log-overlay-stub>
`;

exports[`Installer matches snapshot when nodecg status is STOPPED 1`] = `
<div class="ipl-space color-dark layout vertical" data-v-11cc5f1c="">
  <div>Installation folder: </div>
  <status-row-stub color="gray" class="m-t-8"></status-row-stub>
  <div class="layout horizontal m-t-8">
    <ipl-button-stub label="Select folder" color="blue" disabled="false" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" href="" data-test="install-directory-select-button"></ipl-button-stub>
    <ipl-button-stub label="Install" color="green" disabled="true" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" href="" data-test="install-button" class="m-l-8"></ipl-button-stub>
    <ipl-button-stub label="Open dashboard" color="green" disabled="true" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" href="" data-test="open-dashboard-button" class="m-l-8"></ipl-button-stub>
  </div>
</div>
<div class="ipl-expansion-panel__content m-t-8" data-test="nodecg-log-space" data-v-67856a23="">
  <div class="ipl-expansion-panel__header" data-v-67856a23="">
    <div class="ipl-expansion-panel__header-background" data-v-67856a23=""></div>
    <div class="ipl-expansion-panel__title" data-v-67856a23=""> NodeCG log <span class="badge badge-red">Stopped</span></div>
    <font-awesome-icon-stub icon="chevron-left" border="false" fixedwidth="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" class="icon content-expanded" data-v-67856a23=""></font-awesome-icon-stub>
    <div class="header-extra" data-v-67856a23=""></div>
  </div>
  <div class="content" data-v-67856a23="">
    <div class="layout vertical center-horizontal">
      <log-display-stub logkey="run-nodecg" class="m-t-4"></log-display-stub>
    </div>
  </div>
</div>
<log-overlay-stub title="Installing..." logkey="install-nodecg" visible="false" nobackgroundclose="true" withprogress="true"></log-overlay-stub>
`;
